Added the ActionLink from the customer view to the job, cargo and truck views.

--- a/AppDev Project/AppDev Project/Views/Customers/Index.cshtml
+++ b/AppDev Project/AppDev Project/Views/Customers/Index.cshtml
@@ -7,6 +7,9 @@
 <h2>Index</h2>
 
 <p>
+    @Html.ActionLink("Cargo", "Index", "Cargoes")<br />
+    @Html.ActionLink("Job", "Index", "Jobs1") <br />
+    @Html.ActionLink("Truck", "Index", "Trucks")<br /><br />
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
