actionlinks added in the other views

--- a/AppDev Project/AppDev Project/Views/Jobs1/Index.cshtml
+++ b/AppDev Project/AppDev Project/Views/Jobs1/Index.cshtml
@@ -7,6 +7,9 @@
 <h2>Index</h2>
 
 <p>
+    @Html.ActionLink("Customer", "Index", "Customers")
+    @Html.ActionLink("Cargo", "Index", "Cargoes")
+    @Html.ActionLink("Truck", "Index", "Trucks")
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
