--- a/AppDev Project/AppDev Project/Views/Trucks/Index.cshtml
+++ b/AppDev Project/AppDev Project/Views/Trucks/Index.cshtml
@@ -7,6 +7,10 @@
 <h2>Index</h2>
 
 <p>
+    @Html.ActionLink("Customer", "Index", "Customers")
+    @Html.ActionLink("Job", "Index", "Jobs1")
+    @Html.ActionLink("Cargo", "Index", "Cargoes")
+    <br /><br />
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
