--- a/AppDev Project/AppDev Project/Views/Cargoes/Index.cshtml
+++ b/AppDev Project/AppDev Project/Views/Cargoes/Index.cshtml
@@ -14,6 +14,10 @@
   @Html.TextBox("Search"); <input type="submit" value="Search"/>
     }
 <p>
+    @Html.ActionLink("Customer", "Index", "Customers")
+    @Html.ActionLink("Job", "Index", "Jobs1")
+    @Html.ActionLink("Truck", "Index", "Trucks")
+    <br /><br />
    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
